<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/action_settings3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/action_settings4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/action_settings5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings6"
        android:orderInCategory="100"
        android:title="@string/action_settings6"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings7"
        android:orderInCategory="100"
        android:title="@string/action_settings7"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings8"
        android:orderInCategory="100"
        android:title="@string/action_settings8"
        app:showAsAction="never" />
</menu>
